--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "上一秒还有希望，下一秒就有奇迹"
 keyword: "java"
 url: "http://yhx990921.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
+github_repo: "https://github.com/yhx990921/yhx990921.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
